--- a/bin/djhotel/hotelbooking/templates/hotelbooking/home.html
+++ b/bin/djhotel/hotelbooking/templates/hotelbooking/home.html
@@ -2,10 +2,11 @@
 {% block content %}
 {% load static %}
 
-<div class="container-md">100% wide until large breakpoint
+<div class="container-md">
+<div class="text-center">
+    <img src="{% static 'hotelbooking/house.jpg' %}" class="img-fluid" alt="A pciture of craggy island house">
 
-    <img src="{% static 'hotelbooking/house.jpg' %}" alt="A pciture of craggy island house">
+</div></div>
 
-</div>
 {% endblock content %}
 
