--- a/bin/djhotel/hotelbooking/templates/hotelbooking/base.html
+++ b/bin/djhotel/hotelbooking/templates/hotelbooking/base.html
@@ -14,15 +14,32 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Home</a>
-                <a class="nav-item nav-link" href="#">About</a>
+                {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+                <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
                 <a class="nav-item nav-link" href="#">Book A Room</a>
-                <a class="nav-item nav-link" href="#">FAQs</a>
-                <a class="nav-item nav-link" href="#">Login</a>
+                <a class="nav-item nav-link" href="{% url 'faq' %}">FAQs</a>
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+                <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-item nav-link" href="#">Book A Room</a>
+                <a class="nav-item nav-link" href="{% url 'faq' %}">FAQs</a>
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                {% endif %}
               </div>
             </div>
           </nav>
         </div>
+        <div class="col-md-8">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+          </div>
         {% block content %}
 
         {% endblock content %}
@@ -36,11 +53,19 @@
             </a>
         
             <ul class="nav col-md-4 justify-content-end">
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+              {% if user.is_authenticated %}
+              <li class="nav-item"><a href="{% url 'home' %}"class="nav-link px-2 text-muted">Home</a></li>
+              <li class="nav-item"><a href="{% url 'about' %}" class="nav-link px-2 text-muted">About</a></li>
               <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Book A Room</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Login</a></li>
+              <li class="nav-item"><a href="{% url 'faq' %}" class="nav-link px-2 text-muted">FAQs</a></li>
+              <li class="nav-item"><a href="{% url 'logout'%}" class="nav-link px-2 text-muted">Logout</a></li>
+              {% else %}
+              <li class="nav-item"><a href="{% url 'home' %}"class="nav-link px-2 text-muted">Home</a></li>
+              <li class="nav-item"><a href="{% url 'about' %}" class="nav-link px-2 text-muted">About</a></li>
+              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Book A Room</a></li>
+              <li class="nav-item"><a href="{% url 'faq' %}" class="nav-link px-2 text-muted">FAQs</a></li>
+              <li class="nav-item"><a href="{% url 'login'%}" class="nav-link px-2 text-muted">Login</a></li>
+              {% endif %}
             </ul>
           </footer>
         </div>
